[ADD] 完成整体功能

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,10 @@ set(MINISPDLOG_SOURCES
     details/utils.cpp
     formatter.cpp
     patternformatter.cpp
+    logger.cpp
+    registry.cpp
+    asynclogger.cpp
+    details/threadpool.cpp
 )
 
 # 创建静态库
